2006-03-17  David Reveman  <davidr@novell.com>

	* src/window.c (stackAncestors): Never raise desktop windows.

2006-03-16  David Reveman  <davidr@novell.com>

	* plugins/minimize.c:
	* src/event.c (handleEvent):
	* src/window.c:
	Handle window state changes correctly.
	(maximizeWindow): Use actions to determine if we're allowed maximize
	window.

	* src/event.c (handleEvent):
	* src/window.c: Send configure notifies correctly.

2006-03-15  David Reveman  <davidr@novell.com>

	* plugins/switcher.c (switchPaintWindow): Fix paint attribute
	calculations.

	* include/compiz.h:
	* src/event.c (handleEvent):
	* src/window.c: Add restackWindowBelow.

2006-03-14  David Reveman  <davidr@novell.com>

	* plugins/switcher.c: Opacity, brightness and saturation as adjustable
	options. (Greg)

	* src/window.c (syncWindowPosition): Move frame window now instead of
	waiting for client window to change before moving it.

	* plugins/move.c (moveTerminate): Sync window position before
	releasing pointer grab so that the EnterNotify event from the release
	go to the correct window.

	* src/window.c (unmapWindow): Put window in withdrawn state when
	being unmapped. Should make it work better with KDE. (Tim Northover)

	* src/screen.c (addScreen): Fix ambient and diffuse light.

	* src/main.c (main): Add --version command line option.

	* src/event.c:
	* src/screen.c:
	* include/compiz.h: Add bindings for changing window opacity.

2006-03-14  Radek Doulik  <rodo@novell.com>

	* src/event.c (handleEvent): handle minimize/maximize/unmaximize
	window keybindings

	* src/screen.c: added minimize/maximize/unmaximize window
	options/keybindings

	* src/window.c (maximizeWindow): new helper function
	(unmaximizeWindow): ditto

2006-03-14  David Reveman  <davidr@novell.com>

	* plugins/scale.c: Add darken background option (Daniel G. Taylor).

2006-03-13  David Reveman  <davidr@novell.com>

	* src/display.c (eventLoop):
	* include/compiz.h: